# GDReplayFormat

./: .gitignore  CMakeLists.txt  README.md
include/gdr/: gdr.hpp
src/: Replay.cpp  Replay.h  main.cpp
test/: main.cpp
